# batcave

./: .gitignore  manage.py  pyproject.toml  tailwind.config.js
batcave/: asgi.py  settings.py  urls.py  wsgi.py
core/: forms.py  urls.py  utils.py  views.py
static/: batcave.css
storefront/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
storefront/migrations/: 0001_initial.py  0002_product_base_price_product_description_and_more.py  0002_product_stock_selector_productcolor_stock_and_more.py  0003_productimage.py
templates/: base.html  base_footer.html
templates/core/: home.html  login.html  team.html
templates/storefront/: cart.html  dynamic_typography.html  product_detail.html  product_list.html
